fix: fix menu dropdown overlap styles

--- a/src/components/UI/atoms/MenuDropdown/MenuDropdown.module.scss
+++ b/src/components/UI/atoms/MenuDropdown/MenuDropdown.module.scss
@@ -1,11 +1,13 @@
 @use '../../../../shared/stylesheets/variables.scss' as v;
 
 .magneto-ui-menu-dropdown {
-  background-color: v.$color-blue-dark2;
-  color: v.$color-white;
-  border: 0;
-  text-align: left;
-  width: 100%;
+  &__content {
+    background-color: v.$color-blue-dark2;
+    color: v.$color-white;
+    border: 0;
+    text-align: left;
+    width: 100%;
+  }
   &__container {
     padding: 12px 20px;
     display: flex;
